clean ednpoints and types, improve error handling, improve llm logic
